--- a/day1/awesome_answers/app/views/layouts/application.html.erb
+++ b/day1/awesome_answers/app/views/layouts/application.html.erb
@@ -7,8 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav>
+    <%# Not the recommended way to link %>
+    <!-- <a href="<%= contact_path %>">Contact Us</a> -->
+    <%# link_to is a built-in Rails view helper that generates %>
+    <%# an anchor tag <a>.%>
+    <%# The first argument is the anchor text, the 2nd argument is the%>
+    <%# path or url, and then it takes a hash of options%>
+    <%= link_to "Home", root_path, style: "color:turquoise" %>
+    <%= link_to "Contact Us", contact_path, style: "color:turquoise" %>
+    <!-- equivalent to: <a href=contact_path style="color:turquoise">Contact Us</a> -->
+    <%= link_to "Google", "http://www.google.com", {target: "_blank"}%>
+  </nav>
 
 <%= yield %>
-
 </body>
 </html>
