subscribe link added to application.html.erb

--- a/day1/awesome_answers/app/views/layouts/application.html.erb
+++ b/day1/awesome_answers/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <%# The first argument is the anchor text, the 2nd argument is the%>
     <%# path or url, and then it takes a hash of options%>
     <%= link_to "Home", root_path, style: "color:turquoise" %>
+    <%= link_to "Subscribe", subscribe_path, style: "color:turquoise" %>
     <%= link_to "Contact Us", contact_path, style: "color:turquoise" %>
     <!-- equivalent to: <a href=contact_path style="color:turquoise">Contact Us</a> -->
     <%= link_to "Google", "http://www.google.com", {target: "_blank"}%>
