--- a/day1/awesome_answers/app/views/layouts/application.html.erb
+++ b/day1/awesome_answers/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <%= link_to "Contact Us", contact_path, style: "color:turquoise" %>
     <!-- equivalent to: <a href=contact_path style="color:turquoise">Contact Us</a> -->
     <%# <%= link_to "Google", "http://www.google.com", {target: "_blank"}%>
-    <%= link_to "New Question", "new_quesion_path", {target: "_blank"}%>
+    <%= link_to "New Question", new_question_path %>
 
   </nav>
 
