--- a/day1/awesome_answers/app/views/questions/new.html.erb
+++ b/day1/awesome_answers/app/views/questions/new.html.erb
@@ -1,4 +1,18 @@
 
 
 <h1>create a Question</h1>
+<%# The form_for helper method can take an ActiveRecord object as a first arument %>
+<%# for instance, @question, which is of class Question. %>
+<%# Rails, by convention, will do the following: %>
+<%# 1. If @question is not persisted in the database, it will make the action for %>
+<%# the form 'questions_path'. it will look for the class name of the passed %>
+<%# object (in this case its Question) and by convention submit to questions_path %>
 
+<%= form_for @question do |f| %>
+  <%# If you don't mass any option for f.submit it will: %>
+  <%# 1. If @question is not persisted it will make the button label "Create [Object Class]" %>
+  <%# 2. If @question is persisted it will make the button label "Update [Object Class]" %>
+  <% f.submit %>
+<% end %>
+
+<% %>
