Added SHOW action, and index page for Questions controller

--- a/day1/awesome_answers/app/views/layouts/application.html.erb
+++ b/day1/awesome_answers/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
     <!-- equivalent to: <a href=contact_path style="color:turquoise">Contact Us</a> -->
     <%# <%= link_to "Google", "http://www.google.com", {target: "_blank"}%>
     <%= link_to "New Question", new_question_path %>
+    <%= link_to "All Questions", questions_path %>
 
   </nav>
 
