Added Show/Edit functionality

--- a/day1/awesome_answers/app/views/questions/edit.html.erb
+++ b/day1/awesome_answers/app/views/questions/edit.html.erb
@@ -1,16 +1,6 @@
 
+<h1>Edit Question</h1>
 
-<h1>create a Question</h1>
-<%# The form_for helper method can take an ActiveRecord object as a first arument %>
-<%# for instance, @question, which is of class Question. %>
-<%# Rails, by convention, will do the following: %>
-<%# 1. If @question is not persisted in the database, it will make the action for %>
-<%# the form 'questions_path'. it will look for the class name of the passed %>
-<%# object (in this case its Question) and by convention submit to questions_path %>
-<%# 2. If @question is persisted to th database, it will make the action for the %>
-   <%# form go to question_path (/questions/:id) (where :id is the id of %>
-    <%# @question) and it will make the form submit a PATCH request in order for this %>
-    <%# form to submit to the update action in our controller. (Edit/ Update) %>
 
 <% if @question.errors.any?  %>
   <ul>
