removed html code from index view

--- a/day1/awesome_answers/app/views/questions/index.html.erb
+++ b/day1/awesome_answers/app/views/questions/index.html.erb
@@ -1,11 +1,3 @@
 
-<h1>Welcome to the Questions index page</h1>
-<h2>Below is a list of all questions:</h2>
-<% @question.each do |q| %>
-  <div>
-  <%= link_to q.title, question_path({id: q.id}) %>
-  <%# Below is an abbreviated version of the link%>
-  <%# <%= link_to q.title, question_path(q) %>
-  <%# <%= link_to q.title, q %>
-  </div>
-<% end %>
+<h1>Clean Index</h1>
+
